add data when success with post player
